[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fhir-server"
version = "0.1.0"
description = "Python/Flask FHIR R4 Server"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0",
    "sqlalchemy>=2.0",
    "flask-sqlalchemy>=3.1",
    "flask-cors>=4.0",
    "fhir.resources>=7.1",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-flask>=1.3",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
